--- a/分析.md
+++ b/分析.md
@@ -1,6 +1,6 @@
 # SIMON算法轮函数汇编实现分析
 
-## 循环左移操作
+## 对16位的循环左移操作
 
 本部分讨论不同循环左移位数的最优实现方案，这里的“最优方案”仅考虑最少的汇编指令条数。 
 
@@ -14,12 +14,9 @@
 
 直接交换
 ```
-    MOV A, 0x21
-    MOV 0x26, A
-    MOV A, 0x20
-    MOV 0x27, A
+    MOV 0x26, 0x21
+    MOV 0x27, 0x20
 ```
-
 
 ### 循环左移1位、9位
 
@@ -44,21 +41,11 @@
     RLC A
     MOV 0x27, A
 ```
+循环左移1位和9位，依靠两次带进位左移实现。
 
-### 循环左移7位、15位
+### 循环左移15位、7位
 
-1. 循环左移7位
-```
-    MOV A, 0x21 
-    MOV C , 20H.0
-    RRC A
-    MOV 0x26, A
-    MOV A, 0x20
-    RRC A
-    MOV 0x27, A
-```
-
-2. 循环左移15位
+1. 循环左移15位
 ```
     MOV A, 0x20 
     MOV C , 21H.0
@@ -69,9 +56,21 @@
     MOV 0x27, A
 ```
 
+2. 循环左移7位
+```
+    MOV A, 0x21 
+    MOV C , 20H.0
+    RRC A
+    MOV 0x26, A
+    MOV A, 0x20
+    RRC A
+    MOV 0x27, A
+```
+循环左移15位和7位，依靠两次带进位右移实现。
 
-### 循环左移2位 
+### 其他循环左移位数 
 
+剩下的循环左移位数实现的思想依靠乘、除、与等操作，把16位按区间进行重新排列。下面代码展示了如何循环左移两比特。
 ```
     MOV A, 0x20
     ANL A, #0xC0
@@ -106,3 +105,6 @@
 ```
 
 ### 
+
+
+
