--- a/分析.md
+++ b/分析.md
@@ -70,7 +70,7 @@
 
 ### 其他循环左移位数 
 
-剩下的循环左移位数实现的思想依靠乘、除、与等操作，把16位按区间进行重新排列。下面代码展示了如何循环左移两比特。
+剩下的循环左移位数实现的思想依靠乘、除、与、或等操作，按照要左移的位数把16比特划分为4个区间（乘、除、与实现），进行重新组合（或实现）。下面代码展示了如何循环左移两比特。
 ```
     MOV A, 0x20
     ANL A, #0xC0
