--- a/分析.md
+++ b/分析.md
@@ -4,7 +4,7 @@
 
 本部分讨论不同循环左移位数的最优实现方案，这里的“最优方案”仅考虑最少的汇编指令条数。 
 
-以下操作均对0x6544进行循环移位，待移位数据保存在20H, 21H，移位结果保存在26H,27H。
+以下操作均对0x6544进行循环移位，待移位数据保存在20H, 21H，移位结果保存在26H，27H。
 ```
     MOV 0x20, #0x65
     MOV 0x21, #0x44
@@ -114,7 +114,7 @@
     MOV 0x24, #0x01  ;K
     MOV 0x25, #0x00
 
-    ; 循环左移1位 
+    ;循环左移1位 
     MOV A, 0x20
     MOV C, 21H.7
     RLC A
@@ -123,7 +123,7 @@
     RLC A
     MOV 0x27, A
 
-    ；循环左移8位加与操作
+    ;循环左移8位加与操作
     MOV A, 0x26
     ANL A, 0x21
     MOV 0x26, A
@@ -131,7 +131,7 @@
     ANL A, 0x20
     MOV 0x27, A
 
-    ；与R异或
+    ;与R异或
     MOV A, 0x26
     XRL A, 0x22
     MOV 0x26, A
@@ -139,7 +139,7 @@
     XRL A, 0x23
     MOV 0x27, A
 
-    ；循环左移两位加异或操作
+    ;循环左移两位加异或操作
     MOV A, 0x20
     ANL A, #0xC0
     MOV B, #0x40
@@ -182,5 +182,40 @@
     MOV 0x27, A
 
 ```
+
+# 逆向SIMON轮函数
+
+假设SIMON轮函数未公开，攻击者只知道SIMON算法是Feistel结构，轮输入输出的位宽都是32比特，轮数是32轮，密钥位宽64比特。
+
+攻击者实验条件：
+
+1. 可任选明文与密钥，采集设备加密时的能量波形；
+
+2. 可恢复轮函数的每一条汇编指令（SPA实现）；
+
+待解决问题：
+
+1. 恢复SIMON轮函数内部结构
+
+2. 恢复所有指令的操作数
+
+明文32比特，左16比特表示为L0，右16比特表示为R0，第1轮子密钥为K0。 
+
+## 逆向SIMON轮函数结构
+
+R1 = L0, L1 = F(L0) ^ R0 ^ K0，我们要恢复轮函数F。轮函数F包含线性操作和非线性操作，假设线性操作只有循环移位（左移、左移），移位的位数
+是任意的（1-15），非线性操作有与、异或、模加，暂不考虑查表，F是上述操作的任意组合。
+
+### 恢复线性操作 
+
+随机L0，穷举所有移位情况（30种），与波形做相关性分析，判断出F包含哪几种移位操作。
+
+### 恢复非线性操作 
+
+固定L0，随机R0, 固定K0，通过CPA方法恢复F(L0) 的值。由于我们已经恢复出F内部的移位操作，现在又已知F输出值，可逆向推到出非线性操作。
+
+## 恢复各个指令的操作数
+
+现已知SIMON内部轮函数结构，
 
 
