--- a/分析.md
+++ b/分析.md
@@ -70,7 +70,7 @@
 
 ### 其他循环左移位数 
 
-剩下的循环左移位数实现的思想依靠乘、除、与、或等操作，按照要左移的位数把16比特划分为4个区间（乘、除、与实现），把4个区间重新组合（或实现）。下面代码展示了如何循环左移两比特。
+剩下的循环左移位数实现的思想依靠乘、除、与、或等操作，按照要左移的位数把16比特划分为4个部分（乘、除、与实现），把4个部分重新组合（或实现）。下面代码展示了如何循环左移两比特。
 ```
     MOV A, 0x20
     ANL A, #0xC0
@@ -173,7 +173,7 @@
     XRL A, 0x27
     MOV 0x27, A
 
-    ；与k异或
+    ;与k异或
     MOV A, 0x24
     XRL A, 0x26
     MOV 0x26, A
@@ -203,19 +203,35 @@
 
 ## 逆向SIMON轮函数结构
 
-R1 = L0, L1 = F(L0) ^ R0 ^ K0，我们要恢复轮函数F。轮函数F包含线性操作和非线性操作，假设线性操作只有循环移位（左移、左移），移位的位数
+R1 = L0， L1 = F(L0) ^ R0 ^ K0，我们要恢复轮函数F。轮函数F包含线性操作和非线性操作，假设线性操作只有循环移位（左移、右移），移位的位数
 是任意的（1-15），非线性操作有与、异或、模加，暂不考虑查表，F是上述操作的任意组合。
 
 ### 恢复线性操作 
 
-随机L0，穷举所有移位情况（30种），与波形做相关性分析，判断出F包含哪几种移位操作。
+随机L0，穷举所有移位情况（30种），与采集的波形做相关性分析，判断出F包含哪几种移位操作。
 
 ### 恢复非线性操作 
 
-固定L0，随机R0, 固定K0，通过CPA方法恢复F(L0) 的值。由于我们已经恢复出F内部的移位操作，现在又已知F输出值，可逆向推到出非线性操作。
+固定L0，随机R0，固定K0，通过CPA方法恢复F(L0) 的值。由于我们已经恢复出F内部的线性操作，现在又已知F输出值，可逆向推出非线性操作。
 
 ## 恢复各个指令的操作数
 
-现已知SIMON内部轮函数结构，
+现已知SIMON内部轮函数结构，通过眀密文相关性可确定各个操作的开始位置和起始位置，从而把第一轮的汇编指令按照操作进行分组，例如对L0的循环左移1位操作对应于汇编语句的第7条到第13条。结合每组的操作以及相关性分析，很容易的去恢复各个指令的操作数。下面的代码是对应循环左移1位的代码序列：
+
+```
+    MOV ;1 
+    MOV ;2
+    RLC ;3
+    MOV ;4
+    MOV ;5
+    RLC ;6
+    MOV ;7
+```
+对L0的第一字节（左8比特）做相关性分析，指令1、3的相关性很高；对L0的第二字节做相关性分析，指令5、6的相关性很高；指令4与移位结果第一字节有跟高的相关性，指令7与移位结果第二字节有很高的相关性；指令2的操作数根据循环左移1位的实现逻辑看，可判断其操作数为L0第二字节的最高位。
+
+
+
+
+
 
 
