--- a/分析.md
+++ b/分析.md
@@ -4,7 +4,7 @@
 
 本部分讨论不同循环左移位数的最优实现方案，这里的“最优方案”仅考虑最少的汇编指令条数。 
 
-以下操作均对0x6544进行循环移位，待移位数据保存在20H, 21H，移位结果保存在26H，27H。
+以下操作均对0x6544进行循环移位，待移位数据保存在20H，21H，移位结果保存在26H，27H。
 ```
     MOV 0x20, #0x65
     MOV 0x21, #0x44
