--- a/分析.md
+++ b/分析.md
@@ -1,5 +1,7 @@
 # SIMON算法轮函数汇编实现分析
 
+[SIMON算法介绍](https://ctf-wiki.github.io/ctf-wiki/crypto/blockcipher/simon-speck-zh/)
+
 ## 对16位的循环左移操作
 
 本部分讨论不同循环左移位数的最优实现方案，这里的“最优方案”仅考虑最少的汇编指令条数。 
