--- a/分析.md
+++ b/分析.md
@@ -106,84 +106,8 @@
     MOV 0x27, A
 ```
 
-## SIMON第一轮完整汇编实现 
+## [SIMON第一轮完整汇编实现](https://github.com/happyXinx/Simon-Analysis-Based-Disassembler/blob/master/SIMON%E8%BD%AE%E5%87%BD%E6%95%B0%E6%B1%87%E7%BC%96%E4%BB%A3%E7%A0%81.c) 
 
-```
-    MOV 0x20, #0x65  ;L
-    MOV 0x21, #0x44
-    MOV 0x22, #0x68  ;R
-    MOV 0x23, #0x77 
-    MOV 0x24, #0x01  ;K
-    MOV 0x25, #0x00
-
-    ;循环左移1位 
-    MOV A, 0x20
-    MOV C, 21H.7
-    RLC A
-    MOV 0x26, A
-    MOV A, 0x21
-    RLC A
-    MOV 0x27, A
-
-    ;循环左移8位加非线性操作
-    MOV A, 0x26
-    ANL A, 0x21
-    MOV 0x26, A
-    MOV A, 0x27
-    ANL A, 0x20
-    MOV 0x27, A
-
-    ;循环左移两位加异或操作
-    MOV A, 0x20
-    ANL A, #0xC0
-    MOV B, #0x40
-    DIV AB
-    MOV 0x0A, A  ;tmp1
-
-    MOV A, 0x20
-    ANL A, #0x3F
-    MOV B, #0x04
-    MUL AB
-    MOV 0x0B, A ;tmp2
-
-    MOV A, 0x21
-    ANL A, #0xC0
-    MOV B, #0x40
-    DIV AB
-    MOV 0x0C, A ;tmp3
-
-    MOV A, 0x21
-    ANL A, #0x3F
-    MOV B, #0x04
-    MUL AB
-    MOV 0x0D, A ;tmp4
-
-    MOV A, 0x0B
-    ORL A, 0x0C
-    XRL A, 0x26
-    MOV 0x26, A
-    MOV A, 0x0A
-    ORL A, 0x0D
-    XRL A, 0x27
-    MOV 0x27, A
-    
-    ;与R异或
-    MOV A, 0x26
-    XRL A, 0x22
-    MOV 0x26, A
-    MOV A, 0x27
-    XRL A, 0x23
-    MOV 0x27, A    
-    
-    ;与k异或
-    MOV A, 0x24
-    XRL A, 0x26
-    MOV 0x26, A
-    MOV A, 0x25
-    XRL A, 0x27
-    MOV 0x27, A
-
-```
 
 # 逆向SIMON轮函数
 
